--- a/Views/Home/StudentForm.cshtml
+++ b/Views/Home/StudentForm.cshtml
@@ -2,8 +2,77 @@
     ViewData["Title"] = "Student Form";
 }
 
-<h2>Student Information Form</h2>
+<head>
+    <style>
+        body {
+            align-content:center;
+            padding-left:130px;
+            padding-right: 130px;
+        }
 
+        form {
+            border-block-color: black;
+            background-color: lightpink;
+            padding-left: 20px;
+            padding-top: 30px;
+            padding-bottom: 30px;
+            font-size: 18px;
+
+        }
+
+        h2 {
+            font-size: 45px;
+        }
+
+    </style>
+    <h2>Student Information Form</h2>
+</head>
+
+<body>
 <form method="post">
     <!-- Students will complete the form here -->
+
+    <label>First Name</label> <br>
+    <input type="text" name="FirstName" placeholder="First Name" required />
+
+    <br><br>
+    <label>Last Name</label> <br>
+    <input type="text" name="LastName" placeholder="Last Name" required />
+
+    <br><br>
+    <label>Email</label> <br>
+    <input type="email" name="Email" placeholder="Email" required />
+
+    <br><br>
+    <label> Gender </label> <br>
+    <input type="radio" id="male" name="gender" value="Male" />
+    <label> Male </label>
+    <input type="radio" id="female" name="gender" value="Female"/>
+    <label> Female </label>
+
+    <br><br>
+    <label> Year Level </label> <br>
+    <select name="yearlevel">
+        <option id="1year" name="yearlevel" value="1st Year" > 1st Year </option>
+        <option id="2year" name="yearlevel" value="2nd Year" > 2nd Year </option>
+        <option id="3year" name="yearlevel" value="3rd Year" > 3rd Year </option>
+        <option id="4year" name="yearlevel" value="4th Year" > 4th Year </option>
+    </select>
+
+    <br><br>
+    <label> Course </label> <br>
+    <select name="course">
+        <option id="bsit" name="course" value="BSIT"> BSIT </option>
+        <option id="bscs" name="course" value="BSCS"> BSCS </option>
+        <option id="bsemc" name="course" value="BSEMC"> BSEMC </option>
+    </select>
+
+    <br><br>
+    <label> About Me </label> <br>
+    <textarea name="About Me"></textarea>
+
+    <br><br>
+    <input type="button" id="submit" value="Submit" />
+
 </form>
+</body>
